# VK-Bot

./: .env.template  docker-compose.yaml  dockerfile  logging_config.json  pyproject.toml  run_bot.sh
src/: ai_service.py  config.py  database.py  handlers.py  logconfig.py  main.py  middlewares.py
