[project]
name = "vkbot"
version = "0.1.0"
description = ""
authors = [
    {name = "vavlxxx",email = "vladimir.nefedov357@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "vkbottle (>=4.6.2,<5.0.0)",
    "pydantic-settings (>=2.12.0,<3.0.0)",
    "aiosqlite (>=0.22.1,<0.23.0)",
    "openai (>=2.14.0,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false
[tool.poetry.group.dev.dependencies]
ruff = "^0.14.10"
pyright = "^1.1.407"

